--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
 </head>
 
 <body>
+    <div style="display: flex;">
+    
     <canvas id="canvas"></canvas>
     <script src="./script.js" type="application/javascript"></script>
+    <div class="restart" onclick=restart() style="margin-left: 100px; width: 200px; height: 50px; background-color: rgb(255, 99, 43); color: white; text-align: center; padding: 20px;">
+        РЕСТАРТ
+    </div>
+    <div id="record" style="padding: 20px; background-color: beige; color: rgb(0, 0, 0); width: 100px; height: 100px;">Рекорд: 0</div>
+
+</div>
 </body>
 
 </html>
